Fixed footer height on mobile browsers

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -3,7 +3,7 @@ footer {
   background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(11, 10, 22, 1) 0%);
   border-radius: 0px 100px 0px 0px;
   color: $FooterColor;
-  height: 100vh;
+  padding: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
