--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -100,7 +100,6 @@ nav ul {
   right: 25px;
   box-shadow: -5px 38px 61px -9px rgba(0, 0, 0, 0.3);
   z-index: 10;
-  overflow: scroll;
 
   & li {
     font-size: 1.3rem;
